--- a/.github/workflows/ci_mi.yml
+++ b/.github/workflows/ci_mi.yml
@@ -63,5 +63,5 @@ jobs:
           done
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Auto apply changes for Multi-instance after Sync fork"
+          commit_message: "CI: Auto apply changes for Multi-instance after Sync fork"
 
